--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: PITrailblazer
+          username: pitrailblazer
           password: ${{ secrets.DOCKER_PASSWORD }}
   
       - name: Login to Github Packages
