--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,8 +58,8 @@ jobs:
   
       - name: Deploy with docker-compose
         run: |
-          make ${{ github.event.inputs.extension }} pull
-          make ${{ github.event.inputs.extension }} up FLAGS="-d --remove-orphans"
+          docker compose -f compose.prod.yml pull
+          docker compose -f compose.prod.yml up -d --remove-orphans
           docker container prune -f
           docker image prune -af
           docker builder prune
